--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -19,7 +19,7 @@
                 CITI PORTFOLIO
             </span>
             </a>
-            <a href="/admin" class="DeepBlueColor">Admin</a>
+            <!--<a href="/admin" class="DeepBlueColor" v-if="currentFundManager != '' && currentFundManager.name=='Admin' " >Admin</a>-->
 
             <!--登陆后的状态栏-->
             <span class="pull-right" v-if="currentFundManager != ''">
@@ -27,7 +27,7 @@
 
                 Hi! <span style="color: gold">{{currentFundManager.name}}</span>  Welcome to CSTC
                 </span>
-                <a href="#">My Portfolio</a>
+                <!--<a href="#">My Portfolio</a>-->
                 <span class="glyphicon glyphicon-shoppong-cart DeepBlueColor">
                     Profit  <strong style="color: gold">${{currentFundManager.profit}}</strong>
                 </span>
@@ -46,8 +46,11 @@
         </nav>
         <ol class="breadcrumb">
             <li><a href="/index">Instruments</a></li>
-            <li v-if="currentFundManager != ''"><a href="/myInstruments">My Instrument</a></li>
-            <li v-if="currentFundManager != ''"><a href="/tradingHistory">TradingHistory</a></li>
+            <li v-if="currentFundManager != '' &&  currentFundManager.name == 'Admin'"><a href="/admin">Admin</a></li>
+            <li v-if="currentFundManager != '' &&  currentFundManager.name!= 'Admin'"><a href="/myInstruments">My
+                Portfolio</a></li>
+            <li v-if="currentFundManager != '' &&  currentFundManager.name!= 'Admin'"><a href="/tradingHistory">TradingHistory</a>
+            </li>
         </ol>
 
     </div>
