--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -15,8 +15,8 @@
     <div id="navDiv">
         <nav class="top">
             <a href="/index">
-            <span class="glyphicon glyphicon-shopping-cart DeepBlueColor">
-                CITI PORTFOLIO
+            <span class="glyphicon  DeepBlueColor">
+                Find®Fund
             </span>
             </a>
             <!--<a href="/admin" class="DeepBlueColor" v-if="currentFundManager != '' && currentFundManager.name=='Admin' " >Admin</a>-->
