--- a/src/main/resources/templates/index/tradingHistory.html
+++ b/src/main/resources/templates/index/tradingHistory.html
@@ -20,7 +20,7 @@
                 <th>id</th>
                 <th>instrument</th>
                 <th>price</th>
-                <th>volume</th>
+                <th>number</th>
                 <th>date</th>
             </tr>
             </thead>
