--- a/src/main/resources/templates/index/myInstruments.html
+++ b/src/main/resources/templates/index/myInstruments.html
@@ -14,28 +14,30 @@
     <div class="instrumentAndChart">
         <!--portfolio数据-->
         <div id="HoldDiv" class="instruments">
-            <span class="tableTitle">My Instrument</span>
+            <span class="tableTitle">my instruments</span>
             <a>portfolio value : {{currentFundManager.instrumentsValue}}</a>
             <table class="table">
                 <thead>
                 <tr>
-                    <!--<th>id</th>-->
+                    <th>id</th>
+                    <th>symbol</th>
                     <th>name</th>
                     <th>price</th>
-                    <th>volume</th>
+                    <th>number</th>
                     <th>sell</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr v-for="(bean,index) in portfolioBeans">
-                    <!--<td>{{bean.id}}</td>-->
-                    <td @click="changeInstrumentChart(bean.instrument.id)">{{bean.instrument.symbol}}</td>
-                    <td>{{bean.instrument.currentPrice[0].price}}</td>
-                    <td>{{bean.volume}}</td>
+                <tr v-for="(bean,index) in portfolioBeans" @mouseover="changeInstrumentChart(bean.instrument.id)">
+                    <td>{{bean.instrument.id}}</td>
+                    <td>{{bean.instrument.symbol}}</td>
+                    <td>{{bean.instrument.name}}</td>
+                    <td>{{bean.currentPrice.price}}</td>
+                    <td>{{bean.hold.volume}}</td>
                     <td style="color: black">
-                        <input min="1" type="number" style="width: 60px" v-model="numberOfInstrumentToSell">
+                        <!--<input min="1" type="number" style="width: 60px" v-model="numberOfInstrumentToSell">-->
                         <button class="button  button-primary button-glow button-tiny button-pill button-jumbo"
-                                :disabled="numberOfInstrumentToSell<1" @click="sellPortfolio(bean.instrumentId)">sell
+                                :disabled="numberOfInstrumentToSell<1" @click="sellPortfolio(bean.instrument.id)">sell
                         </button>
                     </td>
                 </tr>
