--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -24,9 +24,9 @@
                 </li>
 
                 <li><a>total value : {{currentFundManager.instrumentsValue}}</a></li>
-                <li class="pull-right" @click="changeInstrumentsPage('1')"><a>下一页</a></li>
+                <li class="pull-right" @click="changeInstrumentsPage('1')"><a>next</a></li>
                 <li class="pull-right"><a>{{start+1}}</a></li>
-                <li class="pull-right" @click="changeInstrumentsPage('-1')"><a>上一页</a></li>
+                <li class="pull-right" @click="changeInstrumentsPage('-1')"><a>pre</a></li>
             </ul>
 
             <table class="table  table-condensed">
