--- a/src/main/resources/templates/index/tradingHistory.html
+++ b/src/main/resources/templates/index/tradingHistory.html
@@ -20,7 +20,7 @@
                 <th>id</th>
                 <th>instrument</th>
                 <th>price</th>
-                <th>number</th>
+                <th>quantity</th>
                 <th>date</th>
             </tr>
             </thead>
@@ -35,9 +35,9 @@
             </tbody>
         </table>
         <ul class="nav nav-tabs ">
-            <li @click="changeTradingHistoryPage('-1')"><a>上一页</a></li>
+            <li @click="changeTradingHistoryPage('-1')"><a>pre</a></li>
             <li><a>{{tradingHistoryStart+1}}</a></li>
-            <li @click="changeTradingHistoryPage('1')"><a>下一页</a></li>
+            <li @click="changeTradingHistoryPage('1')"><a>next</a></li>
         </ul>
     </div>
 
