--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -49,7 +49,7 @@
             <td>{{bean.id}}</td>
             <td>{{bean.symbol}}</td>
             <td>{{bean.name}}</td>
-            <td>{{bean.currentPrice[0].price}}</td>
+            <td>{{bean.currentPrice.price}}</td>
             <td>{{bean.type}}</td>
         </tr>
         </tbody>
